Walid made gap fixes

--- a/assets/CSS/Registers.css
+++ b/assets/CSS/Registers.css
@@ -47,11 +47,14 @@ body {
 }
 .registeter_section .writing_sec{
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 .registeter_section form {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 25px;
   align-items: center;
 }
 
